# ApraPipes

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AIPExceptions_8h.html  AIPExceptions_8h__incl.map  AIPExceptions_8h__incl.md5  AIPExceptions_8h_source.html  APCallback_8h_source.html  APErrorObject_8h_source.html  APHealthObject_8h_source.html  AV4L2Buffer_8cpp.html  AV4L2Buffer_8cpp__incl.map  AV4L2Buffer_8cpp__incl.md5  AV4L2Buffer_8h.html  AV4L2Buffer_8h__dep__incl.map  AV4L2Buffer_8h__dep__incl.md5  AV4L2Buffer_8h__incl.map  AV4L2Buffer_8h__incl.md5  AV4L2Buffer_8h_source.html  AV4L2ElementPlane_8cpp.html  AV4L2ElementPlane_8cpp__incl.map  AV4L2ElementPlane_8cpp__incl.md5  AV4L2ElementPlane_8h.html  AV4L2ElementPlane_8h__dep__incl.map  AV4L2ElementPlane_8h__dep__incl.md5  AV4L2ElementPlane_8h__incl.map  AV4L2ElementPlane_8h__incl.md5  AV4L2ElementPlane_8h_source.html  AbsColorConversionFactory_8cpp.html  AbsColorConversionFactory_8cpp__incl.map  AbsColorConversionFactory_8cpp__incl.md5  AbsColorConversionFactory_8h.html  AbsColorConversionFactory_8h__dep__incl.map  AbsColorConversionFactory_8h__dep__incl.md5  AbsColorConversionFactory_8h__incl.map  AbsColorConversionFactory_8h__incl.md5  AbsColorConversionFactory_8h_source.html  AbsControlModule_8h_source.html  (+9491 more)
base/: CMakeLists.txt  CMakeLists_bkup.txt  build_dependencies_jetson_cuda.sh  fix-vcpkg-json-win.ps1  fix-vcpkg-json.ps1  fix-vcpkg-json.sh  use-minimal-vcpkg.ps1  use-minimal-vcpkg.sh  vcpkg-configuration.json  vcpkg.cuda.json  vcpkg.jetson.json  vcpkg.json  vcpkg.json.backup  vcpkg.json.minimal-test  vcpkg.nocuda.json
base/SIP/: CMakeLists.txt  README_SIP-CALL_SETUP.md  vidpipe.c
base/bindings/node/: CMakeLists.txt  addon.cpp  (+6 more)
base/cmake/: FindCUDA.cmake
base/cmake_bkupjuly07/: CMakeLists.txt
base/include/: AIPExceptions.h  APCallback.h  APErrorCodes.h  APErrorObject.h  APHealthObject.h  AV4L2Buffer.h  AV4L2ElementPlane.h  AbsColorConversionFactory.h  AbsControlModule.h  AffineTransform.h  AffineTransformRev.h  Allocators.h  ApraData.h  ApraEGLDisplay.h  ApraEglRenderer.h  ApraFaceInfo.h  ApraHoughSegmentDetectorImpl.h  ApraLines.h  ApraNvEglRenderer.h  ApraPoint2f.h  ApraPoint3f.h  ApraPool.h  ArchiveSpaceManager.h  ArgusStats.h  ArrayMetadata.h  AudioCaptureSrc.h  AudioToTextXForm.h  BMPConverter.h  BaresipAdapter.h  BaresipDemo.h  BaresipVideoAdapter.h  BaresipVideoSink.h  BaresipWebRTC.h  BayerToGray.h  BayerToMono.h  BayerToRGBA.h  BayerToYUV420.h  BoundBuffer.h  BrightnessContrastControl.h  BrightnessContrastControlXform.h  (+213 more)
base/scripts/: scan_modules.py
base/src/: APErrorObject.cpp  APHealthObject.cpp  AV4L2Buffer.cpp  AV4L2ElementPlane.cpp  AbsColorConversionFactory.cpp  AbsColorConversionFactory.h  AbsControlModule.cpp  AffineSave.cpp  AffineTransform.cpp  AffineTransformRev.cpp  AffineTransform_bkp.cpp  Affine_1303.cpp  Affine_SUn.cpp  Affine_YUV444working.cpp  ApraEGLDisplay.cpp  ApraEglRenderer.cpp  ApraFaceInfo.cpp  ApraHoughSegmentDetectorImpl.cpp  ApraLines.cpp  ApraPool.cpp  ApraUtils.cpp  ArchiveSpaceManager.cpp  ArgusStats.cpp  AudioCaptureSrc.cpp  AudioToTextXForm.cpp  BMPConverter.cpp  Background.cpp  BaresipAdapter.cpp  BaresipDemo.cpp  BaresipSession.cpp  BaresipVideoAdapter.cpp  BaresipVideoSink.cpp  BaresipWebRTC.cpp  BayerToGray.cpp  BayerToMono.cpp  BayerToRGBA.cpp  BayerToYUV420.cpp  BrightnessContrastControl.cpp  BrightnessContrastControlXform.cpp  CCKernel.cu  (+192 more)
base/test/: BayerToYUV420_tests.cpp  DMAUtils_test.cpp  ImageEncodeCV_tests.cpp  Imageresizecv_tests.cpp  NVEncProxy.cpp  QRReader_tests.cpp  TestSignalGenerator_tests.cpp  V4L2CameraSource_tests.cpp  VoiceActivityDetectorTests.cpp  affine_transform_tests.cpp  affinetransform_tests.cpp  apraegldisplay_tests.cpp  archivespacemanager_tests.cpp  at_tests.cpp  atlui.glade  audioToTextXform_tests.cpp  baresip_adapter_tests.cpp  baresip_webrtc_tests.cpp  baresipvideosink_tests.cpp  bmpconverter_tests.cpp  brightness_contrast_tests.cpp  calchistogramcv_tests.cpp  ccnppi_tests.cpp  color_conversion_tests.cpp  cuda_arm_tests.cpp  cudamemcopy_tests.cpp  custom_tests.cpp  cv_memory_leaks_tests.cpp  diskspaceManager_tests.cpp  dummydma_tests.cpp  effectsnppi_tests.cpp  eglrenderer_test.cpp  eventsource_tests.cpp  facedetectorXform_tests.cpp  facedetector_tests.cpp  faciallandmarkcv_tests.cpp  faciallandmarkscv_tests.cpp  fileRecovery_tests.cpp  filenamestrategy_tests.cpp  filereadermodule_tests.cpp  (+100 more)
base/tools/: aprapipes_cli.cpp  schema_generator.cpp
base/webRTCcomponents/: README_WebRTCSetup.md  go.mod  go.sum  index.html  webrtc.js
samples/: ApraPipesSamples.md  CMakeLists.txt  IMPORT_SUMMARY.md  INDEX.md  QUICKSTART.md  README.md  TESTING.md  build_samples.ps1  cMakeLists.txt  cMakeLists_bkup.txt  copy_dlls.cmake  samples_import_exp.md  test_runner.cpp
samples/RecordWebcam/: CMakeLists.txt  RecordWebcam.cpp  RecordWebcam.h  pipelineMain.cpp
samples/assignment/: CMakeLists.txt  Shape.h  circle.cpp  circle.h  main.cpp  pipelineMain.cpp  rectangle.cpp  rectangle.h  test.cpp  triangle.cpp  triangle.h
samples/create_thumbnail_from_mp4_video/: CMakeLists.txt  GenerateThumbnailsPipeline.cpp  GenerateThumbnailsPipeline.h  generate_thumbnail_from_mp4_video.cpp  pipelineMain.cpp  test_generate_thumbnail_from_mp4_video.cpp
samples/face_detection_cpu/: CMakeLists.txt  face_detection_cpu.cpp  face_detection_cpu.h  pipelineMain.cpp  test_face_detection_cpu.cpp
samples/play_mp4_from_begining/: CMakeLists.txt  test_play_mp4_video_from_begining.cpp
samples/play_mp4_from_beginning/: CMakeLists.txt  PlayMp4VideoFromBeginning.cpp  PlayMp4VideoFromBeginning.h  pipelineMain.cpp  play_mp4_video_from_beginning.cpp  test_play_mp4_video_from_beginning.cpp
samples/relay-sample/: PipelineMain.cpp  cMakeLists.txt  relay_sample.cpp  relay_sample.h  relay_sample_test.cpp
samples/timelapse-sample/: CMakeLists.txt  PipelineMain.cpp  timelapse_summary.cpp  timelapse_summary.h  timelapse_summary_test.cpp
samples/timelapse_sample/: timelapse_summary.cpp  timelapse_summary.h  timelapse_summary_test.cpp
(+1970 files in other folders)
